tests/paczka1/fuzzy1/94640886.err
Error in line 16: eLn A637 85,7
Error in line 17: eLn S670 32,3
Error in line 31: Mj9c0NGlu8F S45 254,8
Error in line 32: Mj9c0NGlu8F A637 50,0
Error in line 34: DfSwVAcjt9 S45 45,4
